tests/ui/diagnostic_namespace/on_const/it_works_foreign.stderr
error[E0015]: cannot call non-const operator in constants
  --> $DIR/it_works_foreign.rs:10:5
   |
LL |     x == x;
   |     ^^^^^^
   |
note: impl defined here, but it is not `const`
  --> $DIR/auxiliary/non_const_impl.rs:11:1
   |
LL | impl PartialEq for X {
   | ^^^^^^^^^^^^^^^^^^^^
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
